# property_adviser

./: .gitignore  AGENTS.md  FEATURE_ENGINEERING_UPDATES.md  FINAL_CHECKPOINT_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QWEN.md  README.md  SUBURB_MEDIAN_SIMPLIFICATION_SUMMARY.md  discover.ipynb  fixed_feature_selection.py  pyproject.toml  requirements-lock.txt  requirements.txt  test_project_root.py  test_recommend_features.py  test_street_extraction.py
app/: AGENTS.md  GEMINI.md  Overview.py  app.py  data_profiler_app.py  market_insights_app.py  market_price_visualise.py  predict_app.py  utils.py
app/pages/: 1_Data_Preprocessing.py  2_Feature_Engineering.py  3_Model_Selection.py  4_Model_Prediction.py
archive/: FEATURE_ENGINEERING_UPDATES.md  FINAL_CHECKPOINT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QWEN.md  SUBURB_MEDIAN_SIMPLIFICATION_SUMMARY.md
config/: clean.yml  derive1.yml  derive2.yml  derive20251030.yml  feature_engineering.yml  features.yml  geocode.yml  macro.yml  model.yml  pp_clean.yml  pp_derive.yml  pp_derive_new.yml  preprocessing.yml  settings.json  street_coordinates.csv
data/clean/: cleaned.parquet  dropped_rows.parquet
data/derive/: derived1.parquet  derived2.parquet
data/geocode/: geocoded.parquet
data/macro/: asx200_yearly.csv  cpi_annual_avg.csv  cpi_annual_december.csv  cpi_quarterly.csv  macro_au_annual.csv  rba_cash_annual.csv  rba_cash_daily.csv
data/preprocess/: cleaned.csv  cleaned.parquet  derived.csv  derived.parquet  derived_detailed.parquet  dropped_rows.parquet  metadata.json  segments.parquet
data/training/: X.csv  X.parquet  X_train.parquet  X_val.parquet  feature_importances.json  feature_metadata.json  feature_scores.csv  feature_scores.parquet  selected_features.txt  suburb_month_medians.parquet  training.csv  training.parquet  y.csv  y.parquet  y_train.parquet  y_val.parquet
docs/: AGENTS.md  APPS.md  COMMON.md  CORE.md  DEV_GUIDELINES.md  FEATURE_SELECTION.md  MACRO.md  PREDICT.md  PREPROCESS_MODULE.md  TRAINING.md
property_adviser/: cli.py  config.py  preprocess.py
src/: config.py  configuration.py  data_tracking.py  feature_selection.py  model_prediction.py  model_training.py  preprocess.py  preprocess_clean.py  preprocess_derive.py  run_pipeline.py  suburb_median.py
tests/: test_auto_arima_regressor.py  test_core_modules.py  test_derive_steps_alignment.py  test_feature_compute.py  test_model_promotion.py  test_prediction.py  test_preprocess_derive.py  test_sarimax_regressor.py
(+127 files in other folders)
