[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "property-adviser"
version = "0.1.0"
description = "Property Adviser ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "pyyaml",
  "pyarrow",
  "matplotlib",
  "seaborn",
  "scipy",
  "statsmodels"
]

[tool.setuptools.packages.find]
include = ["property_adviser*"]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov"
]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true

[tool.uv]
link-mode = "copy"


[project.scripts]
pa-preprocess = "property_adviser.preprocess.cli:main"
pa-feature-selection = "property_adviser.feature.cli:main"
pa-train = "property_adviser.train.cli:main"
pa-macro = "property_adviser.macro.cli:main"
pa-pipeline = "property_adviser.cli:main"
pa-promote = "property_adviser.train.promotion_cli:main"
